--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,10 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.11.2</version>
+    </dependency>
   </dependencies>
 </project>
