Advert DAO and fix compilation errors

--- a/src/main/resources/mysql_local.properties
+++ b/src/main/resources/mysql_local.properties
@@ -1,5 +1,5 @@
-dbName = "shopper"
-userName = "root"
-password = "password"
-hostname = "localhost"
-port = "3306"
+dbName = shopper
+userName = root
+password = password
+hostname = localhost
+port = 3306
