--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com</groupId>
-  <artifactId>searcher</artifactId>
+  <artifactId>localdealfinder</artifactId>
   <version>1.0-SNAPSHOT</version>
   <build>
     <plugins>
